attempt at fixing hover on mobile

--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -71,32 +71,26 @@ html {
     }
   }
 
-  &:hover {
+  &:hover &:active {
     cursor: pointer;
     transform: translate(0, -10px);
     border-top: 3px solid red;
     box-shadow: rgba(11, 11, 11, 0.56) 0px 2px 18px 0px;
-
-    .card-btn {
-      display: block;
-    }
-
-    h2 {
-      color: $brown;
-      transform: translate(0, -10px);
-      transition: all 0.5s ease;
-    }
-
-    h4 {
-      color: $subtextHover;
-      transform: translate(0, -10px);
-      transition: all 0.5s ease;
-    }
   }
-  &:active {
+  .card-btn {
+    display: block;
+  }
+
+  h2 {
+    color: $brown;
     transform: translate(0, -10px);
-    border-top: 3px solid red;
-    box-shadow: rgba(11, 11, 11, 0.56) 0px 2px 18px 0px;
+    transition: all 0.5s ease;
+  }
+
+  h4 {
+    color: $subtextHover;
+    transform: translate(0, -10px);
+    transition: all 0.5s ease;
   }
 }
 
